// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Тест компонента Button Отрисовка c блокировкой 1`] = `
<div>
  <button
    class="text text_type_button text_color_primary button undefined false "
    disabled=""
    type="button"
  >
    <p
      class="text undefined"
    />
  </button>
</div>
`;

exports[`Тест компонента Button Отрисовка без текста 1`] = `
<div>
  <button
    class="text text_type_button text_color_primary button undefined false "
    type="button"
  >
    <p
      class="text undefined"
    />
  </button>
</div>
`;

exports[`Тест компонента Button Отрисовка с индикацией загрузки 1`] = `
<div>
  <button
    class="text text_type_button text_color_primary button undefined loader "
    disabled=""
    type="button"
  >
    <img
      alt="Загрузка."
      class="loader_icon"
      src="loader.svg"
    />
  </button>
</div>
`;

exports[`Тест компонента Button Отрисовка с текстом 1`] = `
<div>
  <button
    class="text text_type_button text_color_primary button undefined false "
    type="button"
  >
    <p
      class="text undefined"
    >
      Кнопка
    </p>
  </button>
</div>
`;
